--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,14 @@
 {
+    "name": "jpederson/wp-pure",
+    "description": "A custom WordPress theme framework to jumpstart new themes.",
+    "type": "library",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "James Pederson",
+            "email": "james@jpederson.com"
+        }
+    ],
     "require": {
         "cmb2/cmb2": "^2.6"
     }
