Add the twitter aggregator to the composer file, add admin area functionality in a new file.

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
             "name": "James Pederson",
             "email": "james@jpederson.com"
         }
-    ]
+    ],
+    "require": {
+        "jpederson/twitter-aggregator": "*"
+    }
 }
