Update the package name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jpederson/wp-pure",
+    "name": "wp-pure/core",
     "description": "A custom WordPress theme framework to jumpstart new themes.",
     "type": "project",
     "license": "MIT",
