Update package name to further shorten it.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wp-pure/core",
+    "name": "pure/core",
     "description": "A custom WordPress theme framework to jumpstart new themes.",
     "type": "project",
     "license": "MIT",
