Update dependency package name.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
         }
     ],
     "require": {
-        "jpederson/twitter-aggregator": "*"
+        "pure/twitter-aggregator": "*"
     }
 }
